Grammer.txt
1.	Program → Lists
2.	Lists → List Lists`
3.	Lists` → List Lists` | ε
4.	List → ( Content )
7.	Content → List | Block | Expression | ε
8.	Block → dotimes ( identifier Value ) Lists | when ( Expression ) Lists
9.	Expression → Function | logicalTrue | logicalFalse
10.	Function → ReadFunction | UnaryFunction | BinaryFunction | OtherFunction | UnaryBinaryFunction | BinaryMoreFunction
11. ReadFunction → read ExtraValue
12.	UnaryFunction → UnaryFunctionName Value
13.	UnaryFunctionName → write | sin | cos | tan
14.	BinaryFunction → SetqFunction | BinaryOperatorFunction
15.	SetqFunction → setq identifier Value
16.	BinaryOperatorFunction → BinaryOperator Value Value
17.	OtherFunction → identifier Parameters
18. UnaryBinaryFunction → UnaryBinaryOperator identifier ExtraValue
19. ExtraValue → Value | ε
20.	UnaryBinaryOperator → increment | decrement
21. BinaryMoreFunction → BinaryMoreOperators Value Value Parameters
22. BinaryMoreOperators → + | - | * | \
23.	BinaryOperator → mod | rem | >= | <= | > | < | = | <>
24.	Parameters → Value Parameters` | ε
25.	Parameters` → Value Parameters` | ε
26.	Value → logicalTrue | logicalFalse | string | Atom | ( Function )
27.	Atom → identifier | number
